implemelting total incomes & expenses & remaining
